[metadata]
name = tidepool
version = 0.3.0
author = "Declan O'Mara"
author_email = declan@tidepool.finance
url = https://tidepool.finance
description = "Main package for the Tidepool Finance project."
long_description = file: README.md
long_description_content_type = text/markdown
license = All Rights Reserved


[options]
packages = find:
install_requires =
    requests